--- a/Practice1.ipynb
+++ b/Practice1.ipynb
@@ -625,6 +625,97 @@
     "stages = [4,4,4,4,4]\n",
     "solution(N, stages)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2018 KAKAO BLIND RECRUITMENT\n",
+    "### [1차] 비밀지도"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, arr1, arr2):\n",
+    "    map1 = [[] for _ in range(n)]\n",
+    "    map2 = [[] for _ in range(n)]\n",
+    "    \n",
+    "    answer = [[] for _ in range(n)]\n",
+    "    \n",
+    "    for idx, num in enumerate(arr1):\n",
+    "        while num > 1:\n",
+    "            map1[idx].append(num % 2)\n",
+    "            num = num // 2\n",
+    "\n",
+    "        map1[idx].append(num)\n",
+    "\n",
+    "        if len(map1[idx]) < n:\n",
+    "            while True:\n",
+    "                if len(map1[idx]) == n:\n",
+    "                    break\n",
+    "                map1[idx].append(0)\n",
+    "\n",
+    "        map1[idx].reverse()\n",
+    "\n",
+    "    \n",
+    "    for idx, num in enumerate(arr2):\n",
+    "        while num > 1:\n",
+    "            map2[idx].append(num % 2)\n",
+    "            num = num // 2\n",
+    "\n",
+    "        map2[idx].append(num)\n",
+    "\n",
+    "        if len(map2[idx]) < n:\n",
+    "            while True:\n",
+    "                if len(map2[idx]) == n:\n",
+    "                    break\n",
+    "                map2[idx].append(0)\n",
+    "\n",
+    "        map2[idx].reverse()\n",
+    "\n",
+    "\n",
+    "    for idx ,(floor1, floor2) in enumerate(zip(map1, map2)):\n",
+    "        for cell1, cell2 in zip(floor1, floor2):\n",
+    "            if cell1 == 0 and cell2 == 0:\n",
+    "                answer[idx].append(' ')\n",
+    "            \n",
+    "            else:\n",
+    "                answer[idx].append('#')\n",
+    "\n",
+    "    \n",
+    "    answer = list(map(''.join, answer))\n",
+    "\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#####', '# # #', '### #', '#  ##', '#####']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "arr1 = [9, 20, 28, 18, 11]\n",
+    "arr2 = \t[30, 1, 21, 17, 28]\n",
+    "\n",
+    "solution(n, arr1, arr2)"
+   ]
   }
  ],
  "metadata": {
